Fix compounding blowout on new entry page [#2415] (#2416)
* [#2415] Make fancy-select component more predictable; allow setting width

Previously, the initial setup for a fancy-select would set the output's
min-width to the width of the surrounding div, and THEN set it AGAIN to the
width of the interior `<select>` PLUS 30px. This was probably one of two things:

- An aesthetic thing to give extra padding. (Ineffective because: it only
  applied to the first thing selected on page load; other items don't get that
  padding).
- An attempt to make the component wide enough to show any of the select's
  options (Ineffective because: the final width is based on the data attributes
  rather than the options' sizes, and the select gets sized to 100% of its
  container anyway).

Either way, it assumed that nothing would ever set the width of a fancy-select,
which is exactly what the new entry page does below a certain breakpoint. This
commit removes that +30px behavior, and also:

- Makes it border-box safe. The jQuery docs say `.width()` is unreliable when
  `box-sizing: border-box;`, so we should be using `.css('width')`. Works fine
  with `parseInt()`.
- Limits the fancy-select's min-width to 95% of the window. Long content can
  still force it to blow past the window width, but if that happens, we'll allow
  it to come back inside the window if it's later changed to a smaller option.
- If the fancy-select DOES end up wider than the window width, make it overflow
  instead of wrapping its text and looking awful.

* [#2415] New entry page: Clean up mix of layouts in `#entry-quick-actions`

Mixing Foundation's pseudo-grid columnar layout classes with explicit flexbox
layouts turns out to be a recipe for a bad time. Having one firmly inside the
other is fine, but interleaving them isn't.

Incoherent mixtures are hard to reason about so I'm not 100% sure what was
happening here, but I think it eventually came down to a `width: 100%` property

--- a/htdocs/scss/pages/entry/new.scss
+++ b/htdocs/scss/pages/entry/new.scss
@@ -125,65 +125,56 @@
     .usejournal-text {
         line-height: $entry-quick-action-height;
     }
-
-    @media #{$small-only} {
-        .entry-quick-metadata li:last-of-type {
-            width: 100%;
-
-            .fancy-select {
-                width: 100%;
-            }
-            .fancy-select-output {
-                border-radius: $global-radius;
-            }
-        }
-    }
-
-    @media #{$medium-up} {
-        .fancy-select-output {
-            width: auto;
-        }
-    }
 }
 
 .flexbox {
     .entry-quick-actions {
-      display: -webkit-flex;
-      display: flex;
-      -webkit-flex-wrap: wrap;
-      flex-wrap: wrap;
-    }
-
-    .entry-quick-actions.row .columns {
-      width: auto;
-      -webkit-flex-shrink: 0;
-      flex-shrink: 0;
-    }
-
-    .secondary-actions {
-        -webkit-flex-grow: 1;
-        flex-grow: 1;
         display: -webkit-flex;
-        display: flex;
-        -webkit-justify-content: flex-end;
-        justify-content: flex-end;
-    }
-
-    .secondary-actions input[type=button]{
-      -webkit-flex-shrink: 0;
-      flex-shrink: 0;
-    }
-
-    .entry-quick-metadata {
-        display: -webkit-flex;
-        display: flex;
+        -webkit-flex-direction: row;
+        -webkit-align-items: stretch;
+        -webkit-justify-content: space-between;
         -webkit-flex-wrap: wrap;
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        justify-content: space-between;
         flex-wrap: wrap;
-        -webkit-justify-content: flex-start;
-        justify-content: flex-start;
 
-        input[type=text] {
-            top: 0;
+        .entry-quick-metadata, .secondary-actions {
+            display: -webkit-flex;
+            -webkit-flex-grow: 1;
+            display: flex;
+            flex-grow: 1;
+            & > li {
+                margin-bottom: 0 !important; // override generic #content ul li rule
+            }
+        }
+        .entry-quick-metadata {
+            -webkit-justify-content: flex-start;
+            -webkit-flex-wrap: wrap;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+
+            // There's a text field if no one's logged in; this aligns it.
+            input[type=text] {
+                top: 0;
+            }
+            @media #{$small-only} {
+                width: 100%;
+                li:last-of-type {
+                    width: 100%;
+                    .fancy-select {
+                        width: 100%;
+                    }
+                    .fancy-select-output {
+                        border-radius: $global-radius; // on own line.
+                    }
+                }
+            }
+        }
+        .secondary-actions {
+            -webkit-justify-content: flex-end;
+            justify-content: flex-end;
         }
     }
 }
@@ -191,6 +182,7 @@
 .current-entry {
     textarea {
         font-family: monospace;
+        font-size: 16px;
     }
 }
 
@@ -206,13 +198,22 @@
         font-size: 1rem;
     }
 
-    p, label, input, legend, ul, select, textarea {
+    p, label, legend, ul {
         font-size: .8rem;
     }
 
+    input, select, textarea {
+        font-size: .8rem;
+        @media (pointer: coarse) {
+            // Appease mobile Webkit so it won't *dramatic woodchuck* zoom on
+            // input focus. Minimum font-size to Not Do That: 16px.
+            font-size: 16px;
+        }
+    }
+
     input[type=text], input[type=password], select {
-        height: 2rem;
-        padding: .4rem;
+        height: 2.2em;
+        padding: .4em;
     }
 
     .postfix {
